pkg/kev/testdata/in-cluster-service/render/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kev render
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kev render
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/dev-esnet: "true"
        io.kompose.service: backend
    spec:
      containers:
        - env:
            - name: CACHE_ENDPOINT
              value: cache:6379
          image: ezodude/backend-cok8s:dev
          livenessProbe:
            exec:
              command:
                - echo
                - Define healthcheck command for service backend
            failureThreshold: 3
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 10
          name: backend
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 10Mi
      restartPolicy: Always
status: {}
