pkg/kev/testdata/in-cluster-service/render/cache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kev render
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: cache
  name: cache
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: cache
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kev render
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/dev-esnet: "true"
        io.kompose.service: cache
    spec:
      containers:
        - image: docker.io/bitnami/redis:6.0-debian-10
          livenessProbe:
            exec:
              command:
                - echo
                - Define healthcheck command for service cache
            failureThreshold: 3
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 10
          name: cache
          ports:
            - containerPort: 6379
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 10Mi
          volumeMounts:
            - mountPath: /bitnami/redis/data
              name: redis-data
      restartPolicy: Always
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-data
status: {}
