pkg/kev/testdata/in-cluster-service/render/cache-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kev render
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: cache
  name: cache
spec:
  ports:
    - name: "6379"
      port: 6379
      targetPort: 6379
  selector:
    io.kompose.service: cache
status:
  loadBalancer: {}
