pkg/kev/testdata/in-cluster-service/render/dev-esnet-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: dev-esnet
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/dev-esnet: "true"
  podSelector:
    matchLabels:
      io.kompose.network/dev-esnet: "true"
