pkg/kev/testdata/in-cluster-service/render/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kev render
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kev render
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/dev-esnet: "true"
        io.kompose.service: frontend
    spec:
      containers:
        - env:
            - name: PORT
              value: "8080"
          image: ezodude/frontend-cok8s:dev
          livenessProbe:
            exec:
              command:
                - echo
                - Define healthcheck command for service frontend
            failureThreshold: 3
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 10
          name: frontend
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 10Mi
      restartPolicy: Always
status: {}
